manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellogo
spec:
  selector:
    app: hellogo
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
