manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellogo-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hellogo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hellogo
                port:
                  number: 8085
